--- a/client/public/index.html
+++ b/client/public/index.html
@@ -22,7 +22,7 @@
         window.addEventListener("load", function() {
           navigator.serviceWorker
             .register("service-worker.js", {
-              scope: "/app/"
+              scope: "/"
             })
             .then(
               function(registration) {
